Fixed some css bugs, removed placeholder html
- fixed line-height
- removed the extra action buttons
- post in post list now uses margin instead of
  padding to prevent text overflowing

--- a/binarymac/static/css/style.css
+++ b/binarymac/static/css/style.css
@@ -289,13 +289,13 @@ a {
     box-shadow: 0px 0px 2px 1px #555;
     height: 45px;
     z-index: 20;
+    line-height: 45px;
+    font-size: 16px;
 }
 
 .action_button {
     float: left;
     padding: 0 18px;
-    font-size: 14px;
-    font-weight: 400;
 }
 
 .action_left {
@@ -339,13 +339,14 @@ a {
     box-shadow: 0px 1px 2px 1px #aaa;
     overflow: hidden;
     color: #333;
-    padding: 18px;
     background: #fff;
 }
 
 .post {
     text-align: left;
-    height: 100%;
+    height: 384px;
+    margin: 18px;
+    overflow: hidden;
 }
 
 .post_stage {
